# gnome-theme-starter

./: .gitignore  README.md  gulpfile.js  meson.build  package.json
src/theme-dark/: index.theme
src/theme-dark/gtk-3.0/: assets  gtk.scss  scss
src/theme-starter/: index.theme
src/theme-starter-dark/gtk-2.0/: render-assets.sh
src/theme-starter-dark/gtk-3.0/: _apps.scss  _color-palette.scss  apps  assets  gtk.scss
src/theme-starter/gnome-shell/: gnome-shell.scss
src/theme-starter/gtk-2.0/: render-assets-external.sh
src/theme-starter/gtk-3.0/: _common.scss  _drawing.scss
src/theme-starter/gtk-3.0/apps/: _nautilus.scss
src/theme/gtk-3.0/: gtk-dark.scss  gtk.scss
src/theme/gtk-3.0/scss/: _apps.scss  _colors.scss
theme-starter/: meson.build
theme-starter-dark/: meson.build
theme-starter-dark/gtk-3.0/: _apps.scss  _color-palette.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _variables.scss  assets  gtk-dark.scss  meson.build
theme-starter/gnome-shell/: meson.build
theme-starter/gtk-3.0/: _common.scss  gtk.scss  meson.build
